# pylml

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
_legacy/: Compiler.py  Datapoint.py  Models.py  Utils.py
_legacy/configs/: AugmentationsConfig.ini  __init__.py
_legacy/data/: __init__.py
_legacy/data/src/: augmentation.py  reduction.py  utils.py
_legacy/guis/: AugmentationsGUI.py  __init__.py
_legacy/utils/src/: compiler.py  labeller.py
demo/: llama3_test.py  llama3guard_test.py  video_detection.py
pylml/: __init__.py
pylml/CNN/: __init__.py
pylml/CNN/src/: CNN.py  CNNClassificationResNet.py  CNNDetectionFasterRCNN.py  CNNDetectionSSD.py  CNNKeypoint.py  CNNSegmentationDeeplabV3.py
pylml/CNN/test/: main.py
pylml/LLM/: README.md  __init__.py
pylml/LLM/src/: LLM.py  LLMEmbeddingAmazonTitan.py  LLMEmbeddingSentenceTransformer.py  LLMEmbeddingUAE.py  LLMInstructGenerationLlama3.py  LLMInstructGenerationMistral.py  LLMInstructGenerationOPT.py  LLMInstructGenerationPhi.py  LLMSafetyClassificationLlama3.py  LLMSummarizationBART.py  LLMSummarizationPegasus.py  LLMSummarizationT5.py  LLMTextGenerationMistral.py  LLMTextGenerationOPT.py  LLMTextGenerationPhi.py  LLMTextSummarizationBART.py  LLMTextSummarizationPegasus.py  LLMTextSummarizationT5.py  LLMZeroShootClassificationBART.py  LLMZeroShootClassificationDeBERTaV3.py
pylml/ViT/: README.md
pylml/ViT/src/: ViT.py
pylml/_legacy/: __init__.py
pylml/_legacy/src/: CNNDetectionFasterRCNN.py  CNNDetectionRetinaNet.py  (+2 more)
test/: llama3_test.py  llama3guard_test.py
(+16 files in other folders)
