[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylml"
version = "0.1.3"
description = "AI tools"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name="Maxime BLIDI", email="blidi.maxime@gmail.com" }
]

dependencies = [
    "numpy<2",
    "pandas",
    "opencv-python",
    "python-dotenv==1.0.1",
    "tqdm",
    "scikit-learn",
    "matplotlib",
    "torch==2.4.1",
]

[project.optional-dependencies]
all = ["pylml[llm,cnn,vit]"]
llm = [
    "transformers",
    "datasets",
    "accelerate",
    "protobuf==5.28.2",
    "sentencepiece==0.2.0",
    "bitsandbytes==0.44.1",
]
cnn = [
    "torchvision"
]
vit = [
    "transformers",
    "datasets",
    "accelerate",
    "protobuf==5.28.2",
    "sentencepiece==0.2.0",
    "bitsandbytes==0.44.1",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
